# conference-leads-collector

./: .dockerignore  .env.example  .gitignore  Dockerfile  KNOWLEDGE.md  README.md  docker-compose.yml  pyproject.toml
docs/plans/: 2026-03-15-dashboard-action-feedback-design.md
docs/superpowers/plans/: 2026-03-15-vision-first-pipeline.md
seeds/: conferences.txt
src/conference_leads_collector/: __init__.py  cli.py  config.py
src/conference_leads_collector/extractors/: conferences.py  tenchat.py
src/conference_leads_collector/services/: ai_extraction.py  ai_gateway.py  browser.py  source_import.py  tenchat.py  vision_extraction.py  worker.py
src/conference_leads_collector/storage/: db.py  models.py  repositories.py
src/conference_leads_collector/web/: app.py
src/conference_leads_collector/web/templates/: base.html  dashboard.html  jobs.html  sources.html  speakers.html  sponsors.html  tenchat.html
tests/: test_admin_api.py  test_admin_tenchat_api.py  test_ai_extraction.py  test_browser.py  test_cli.py  test_conference_sources_repository.py  test_config.py  test_generic_extractors.py  test_tenchat_extractors.py  test_vision_extraction.py  test_web_app.py  test_worker_pipeline.py
